Fixed responsive issues on mobile chrome

--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
 
 .container {
+    position: fixed;
+    bottom: 0;
     width: 100vw;
     height: 10vh;
     background-color: #FFB805;
